# scanner

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
input.txt/: bbb.txt
src/: main.cpp
test/: input.cpp
